blog/Django_notes.txt
python manage.py startup <insert app name>


'''python manage.py makemigrations and python manage.py migrate'''

python manage.py shell-gets a python prompt to work with project objects 

PS D:\Python Training\django_project> python manage.py shell
Python 3.8.3 (tags/v3.8.3:6f8c832, May 13 2020, 22:20:19) [MSC v.1925 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from blog.models import Post
>>> from django.contrib.auth.models import User
>>> User.object.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'User' has no attribute 'object'
>>> User.objects.all()
<QuerySet [<User: adrian>, <User: TestUser>]>
>>> User.objects.first()
<User: adrian>
>>> User.objects.filter(username='adrian')
<QuerySet [<User: adrian>]>
>>> User.objects.filter(username='adrian').first()
<User: adrian>
>>> user =User.objects.filter(username='adrian').first()
>>> user.id
1
>>> user.pk
1
>>> user
<User: adrian>
>>> post_1 = Post(title='Blog 1',content='First Post Content!' author=user)
  File "<console>", line 1
    post_1 = Post(title='Blog 1',content='First Post Content!' author=user)
                                                               ^
SyntaxError: invalid syntax
>>> post_1 = Post(title='Blog 1',content='First Post Content!', author=user)
>>> Post.objects.all()
<QuerySet []>
>>> post_1.save()
>>> Post.objects.all()
<QuerySet [<Post: Post object (1)>]>

>>> post_2 = Post(title='Blog ', content='Second Post Content',author_id=user.id
... post_2 = Post(title='Blog', content='Second Post Content',author_id=user.id)
  File "<console>", line 2
    post_2 = Post(title='Blog', content='Second Post Content',author_id=user.id)
    ^
SyntaxError: invalid syntax
>>> post_2 = Post(title='Blog', content='Second Post Content',author_id=user.id)
>>> post_2.save()
>>> Post.objects.all()
<QuerySet [<Post: Blog 1>, <Post: Blog>]>
>>> post = Post.objects.first()
>>> post
<Post: Blog 1>
>>> post.content
'First Post Content!'
>>> post.date_posted
datetime.datetime(2020, 5, 27, 11, 45, 12, 941023, tzinfo=<UTC>)
>>> post.author.email
'adrian.m.c.davis@gmail.com'
>>> user.post_set.all()
<QuerySet [<Post: Blog 1>, <Post: Blog>]>
>>> user.post_set.create(title='Blog 3',content='Third Post')
<Post: Blog 3>
>>> Post.objects.all()
<QuerySet [<Post: Blog 1>, <Post: Blog>, <Post: Blog 3>]>
>>> exit()
PS D:\Python Training\django_project>


